--- a/Backend/views/partials/footer.ejs
+++ b/Backend/views/partials/footer.ejs
@@ -4,7 +4,7 @@
         <section class="footer-left">
             
             <div class="logo">
-                <a href=""><img src="/media/logo/logo.png" alt="logo" ></a>
+                <a href=""><img src="/assets/logo/logo.png" alt="logo" ></a>
             </div>
 
             <div class="footer-links">
