--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -1,26 +1,32 @@
 <html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cinecrafter</title>
-    <!-- stylesheet -->
-    <link rel="stylesheet" href="/stylesheets/header-footer.css">
-    <link rel="stylesheet" href="/stylesheets/variables.css">
-    <!-- scripts -->
-    <script defer src="/scripts/header-footer.js"></script>
-    <!-- fa-icons -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cinecrafter</title>
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/stylesheets/variables.css">
+  <!-- scripts -->
+  <script defer src="/scripts/main.js"></script>
+  <!-- fa-icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+  <!-- lottie -->
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
+
 <body>
+  <% if (showLoader) { %>
+    <%- include('partials/loader') %>
+  <% } %>
 
-    <%- include('partials/header') %>
-
-    <main>
-      <h1>Welcome to CineCrafter Home!</h1>
-      <p>Your personalized streaming platform.</p>
-    </main>
-
-    <%- include('partials/footer') %>
-    <%- include('partials/toast') %>
+  <%- include('partials/header') %>
+  <main>
+    <h1>Welcome to CineCrafter Home!</h1>
+    <p>Your personalized streaming platform.</p>
+  </main>
+  <%- include('partials/footer') %>
+  <%- include('partials/toast') %>
 </body>
+
 </html>
