--- a/Backend/public/stylesheets/main.css
+++ b/Backend/public/stylesheets/main.css
@@ -1,3 +1,4 @@
+
 * {  
     margin: 0;
     padding: 0;
@@ -11,30 +12,19 @@ body{
     background: linear-gradient(to right, #252525, #371111);
     background-size: cover;
     background-attachment: fixed;
+    position: relative;
 
 }
 
-/* Loader */
-#loader-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: var(--dark-background);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
-  transition: opacity 0.4s ease;
+main{
+    min-height: 1500px;
+    height: auto;
+    padding-top: 80px; /* Space for fixed header */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
-
-#loader-wrapper.hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
-
 
 
 /* Header */
@@ -199,6 +189,7 @@ footer {
     font-size: 18px;
     font-weight: 400;
     margin-bottom: 8px;
+    cursor: default;
 }
 .footer-left .logo img {
     height: 34px;
@@ -308,3 +299,20 @@ footer {
     color: #c2c2c2;
     font-weight: 300;
 }
+
+/* .carousel {
+    width: 100%;
+    height: 500px;
+    position: absolute;
+    top: 100px;
+    overflow: hidden;
+}
+.carousel-item{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    background-color: #7d9735;
+} */
