--- a/Backend/public/stylesheets/variables.css
+++ b/Backend/public/stylesheets/variables.css
@@ -9,7 +9,7 @@
     /* dark theme colors */
     --font-color: #ffffff;
     --light-background: #3d3d3d;
-    --dark-background: #1A1A1A;
+    --dark-background: #111111;
     --alert-color: #f62862;
     --success-color: #67dc1e;
 }
