--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -7,8 +7,12 @@
   <!-- stylesheet -->
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="/stylesheets/variables.css">
+
   <!-- scripts -->
   <script defer src="/scripts/main.js"></script>
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   <!-- fa-icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <!-- lottie -->
@@ -16,17 +20,18 @@
 </head>
 
 <body>
+
   <% if (showLoader) { %>
     <%- include('partials/loader') %>
   <% } %>
 
   <%- include('partials/header') %>
+
   <main>
-    <h1>Welcome to CineCrafter Home!</h1>
-    <p>Your personalized streaming platform.</p>
+    <%- include('partials/slider') %>
   </main>
+
   <%- include('partials/footer') %>
   <%- include('partials/toast') %>
 </body>
-
 </html>
