--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -33,5 +33,6 @@
 
   <%- include('partials/footer') %>
   <%- include('partials/toast') %>
+  <%- include('partials/scroll-to-top') %>
 </body>
 </html>
