--- a/Backend/views/home.ejs
+++ b/Backend/views/home.ejs
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cinecrafter</title>
+  <!-- favicon -->
+  <link rel="icon" href="/assets/logo/favicon.png" type="image/x-icon">
   <!-- stylesheet -->
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="/stylesheets/variables.css">
-
+  <link rel="stylesheet" href="/stylesheets/home.css">
   <!-- scripts -->
   <script defer src="/scripts/main.js"></script>
   <!-- bootstrap -->
