--- a/Backend/views/landing.ejs
+++ b/Backend/views/landing.ejs
@@ -3,6 +3,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cinecrafter</title>
+  <!-- favicon -->
+  <link rel="icon" href="/assets/logo/favicon.png" type="image/x-icon">
   <!-- stylesheet -->
   <link rel="stylesheet" href="/stylesheets/main.css">
   <link rel="stylesheet" href="/stylesheets/variables.css">
