--- a/Backend/views/partials/toast.ejs
+++ b/Backend/views/partials/toast.ejs
@@ -1,6 +1,6 @@
 <!-- toast.ejs -->
 <div class="toast">
-    <p>Toast message goes here</p>
+    <p>Welcome</p>
 </div>
 
 <style>
@@ -13,7 +13,7 @@
         transform: translateX(-50%);
         background-color: var(--dark-background);
         color: white;
-        padding: 12px 16px;
+        padding: 4px 16px;
         border-radius: 8px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         animation: slideIn 0.5s ease, fadeOut 0.5s ease 2.5s forwards;
