--- a/Backend/views/auth.ejs
+++ b/Backend/views/auth.ejs
@@ -92,9 +92,9 @@
           </div>
         </div>
         <p id="error-msg"></p>
-        <button class="submit-form-btn" type="submit">Login</button>
+        <button class="submit-form-btn" type="submit">Sign Up</button>
          
-        <p>Don't have an account? <a id="toLogin">Sign up</a></p>
+        <p>Don't have an account? <a id="toLogin">Login</a></p>
       </form>
       <!-- Oauth -->
       <div class="oauth-container"></div>
@@ -120,7 +120,7 @@
 
 
     function goTOLanding() {
-      window.location.href = 'http://localhost:5000/';
+      window.location.href = '/';
     }
   </script>
 </body>
