--- a/Backend/views/partials/footer-guest.ejs
+++ b/Backend/views/partials/footer-guest.ejs
@@ -4,17 +4,17 @@
         <section class="footer-left">
             
             <div class="logo">
-                <a href=""><img src="/assets/logo/logo.png" alt="logo" ></a>
+                <a href="/"><img src="/assets/logo/logo.png" alt="logo" ></a>
             </div>
 
             <div class="footer-links">
                 <div class="explore-links">
                     <h2>Explore</h2>
                     <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Movies</a></li>
-                        <li><a href="">Series</a></li>
-                        <li><a href="">Shows</a></li>
+                        <li><a href="/auth">Home</a></li>
+                        <li><a href="/auth">Movies</a></li>
+                        <li><a href="/auth">Series</a></li>
+                        <li><a href="/auth">Shows</a></li>
                     </ul>
                 </div>
                 <div class="cinecrafter-links">
