--- a/Backend/views/partials/header-guest.ejs
+++ b/Backend/views/partials/header-guest.ejs
@@ -11,9 +11,9 @@
                 </div>
                 <!-- nav menu -->
                 <menu>
-                    <a href="/movies">Movies</a>
-                    <a href="/series">Series</a>
-                    <a href="/shows">Shows</a>
+                    <a href="/auth">Movies</a>
+                    <a href="/auth">Series</a>
+                    <a href="/auth">Shows</a>
                 </menu>
             </section>
             <!-- nav-right -->
