--- a/Backend/views/partials/toast.ejs
+++ b/Backend/views/partials/toast.ejs
@@ -11,7 +11,7 @@
         bottom: 20%;
         left: 50%;
         transform: translateX(-50%);
-        background-color: var(--dark-background);
+        background-color: var(--dark-bg-color);
         color: white;
         padding: 4px 16px;
         border-radius: 8px;
