--- a/Backend/public/stylesheets/landing.css
+++ b/Backend/public/stylesheets/landing.css
@@ -1,4 +1,6 @@
-
+main{
+    height: auto;
+}
 /* hero-banner */
 
 .hero-banner{
@@ -16,7 +18,7 @@
 }
 
 .hero-content{
-    padding: 180px 0 0 0;
+    padding: 160px 0 0 0;
     background-color: rgba(0, 0, 0, 0.7);
     width: 100%;
     height: 100%;
@@ -58,4 +60,82 @@
     background-color: #658419;
     color: #ffffff;
     transform: scale(1);
+}
+
+    .footer-top{
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+
+
+
+
+/* Subscribe to newsletters */
+
+.mail-subscription-section{
+    width: 100%;
+    height: 420px;
+    padding: 80px 0 120px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #333;
+}
+
+.mail-subscription-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100%;
+    color: #fff;
+}
+
+.mail-subscription-content h2{
+    font-size: 2.1rem;
+    color: #ffffff;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.mail-subscription-content p{
+    font-size: 1.5rem;
+    color: #d9d9d9;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.mail-subscription-content input[type="email"]{
+    height: 54px;
+    padding: 6px 20px;
+    width: 360px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    margin-right: 10px;
+}
+
+.mail-subscription-content button{
+    height: 54px;
+    padding: 6px 20px;
+    background-color: #658419;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    transition: 0.3s;
+}
+
+.mail-subscription-content button:hover{
+    background-color: #BDF71E;
+    color: black;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.mail-subscription-content button:active{
+    transform: scale(0.9);
 }
