--- a/Backend/views/partials/loader.ejs
+++ b/Backend/views/partials/loader.ejs
@@ -16,7 +16,7 @@
         left: 0;
         width: 100vw;
         height: 100vh;
-        background-color: var(--dark-background);
+        background-color: var(--dark-bg-color);
         display: flex;
         justify-content: center;
         align-items: center;
